Fix custom placeholder spacing on mobile

--- a/packages/nouns-webapp/src/components/Bid/Bid.module.css
+++ b/packages/nouns-webapp/src/components/Bid/Bid.module.css
@@ -92,4 +92,7 @@
   .bidInput {
     border-color: #c3c3c3;
   }
+  .customPlaceholder {
+    left: 44%;
+  }
 }
